--- a/aula3/atividade2/css/style.css
+++ b/aula3/atividade2/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 header {
-    font-family: cursive;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 1.30rem;
     text-align: center;
     color: white;
@@ -15,3 +15,50 @@ body {
     background-color: #F9F9EE;
 }
 
+main {
+    width: 90%;
+    text-align: center;
+    margin: 20px 0 0 65px;
+    padding: 10px;
+}
+
+.produto {
+    display: inline-block;
+    height: 21rem;
+    padding: 1.05rem ;
+    margin: 5px 20px 1.40rem 0;
+    border-radius: 0.313rem;
+    color: #213811;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #a4d683;
+    box-shadow: 2px 2px 5px rgb(219, 219, 203);
+}
+/* #a7d986 */
+/* t= 0, r= 20, b=1.40, l=0*/
+
+
+
+.produto #preco {
+    padding: 10px;
+    font-size: 19px;
+    display: block;
+    font-weight: bold;
+    background-color: #5dad27;
+    padding: 2px 0 0;
+    margin: 10px 0 0 75px;
+    width: 100px;
+    border-radius: 5px;
+}
+
+footer{
+    background-color: mediumseagreen;
+    width: 100%;
+    height: 10px;
+    padding: 20px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    color: white;
+    /*padding: 0 32.5px 0 32.5px;*/
+}
