--- a/aula11/atividade/src/components/Band/Band.module.css
+++ b/aula11/atividade/src/components/Band/Band.module.css
@@ -1,32 +1,3 @@
-:root {
-    --cor-fundo: #333;
-    --cor-texto: #fff;
-    --cor-header: #222;
-    --cor-main: #111;
-    --cor-secao: #222;
-    --cor-borda: #444;
-
-    --fonte-padrao: Arial, sans-serif;
-    --tamanho-h1: 2rem;
-    --tamanho-h2: 1.5rem;
-    --tamanho-p: 1rem;
-
-    --padding-padrao: 1rem;
-    --padding-header: 2rem;
-    --margin-padrao: 1rem;
-
-    --largura-max-main: 75rem;
-    --largura-imagens: 6.25rem;
-    --altura-imagens: 6.25rem;
-    --border-radius: 0.3125rem;
-    --border-size: 0.0625rem;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 .section {
     flex: 1;
@@ -50,6 +21,16 @@
     margin-right: var(--margin-padrao);
 }
 
-.band-info {
+/* .band h2 {
+    font-size: var(--tamanho-h2);
+    margin: 0;
+}
+
+.band p {
+    font-size: var(--tamanho-p);
+    text-align: justify;
+} */
+
+.bandinfo {
     flex: 1;
 }
