--- a/aula12/src/pages/BandDetalhes/BandDetalhes.module.css
+++ b/aula12/src/pages/BandDetalhes/BandDetalhes.module.css
@@ -34,7 +34,9 @@
     color: var(--cor-texto);
   }
 
- .banda {
-    display: flex;
-    align-items: center;
+ div .band {
+  display: flex;
+  justify-content: center;
+  margin-top: 9rem;
+  margin-bottom: 8rem;
 }
