--- a/aula12/src/pages/BandDetalhes/BandDetalhes.module.css
+++ b/aula12/src/pages/BandDetalhes/BandDetalhes.module.css
@@ -34,9 +34,51 @@
     color: var(--cor-texto);
   }
 
- div .band {
+ /* .container {
   display: flex;
   justify-content: center;
   margin-top: 9rem;
   margin-bottom: 8rem;
+} */
+
+/* .container {
+  max-width: var(--largura-max-main);
+  margin: var(--padding-header) auto;
+  background-color: var(--cor-main);
+  padding: var(--padding-header);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+} */
+.container {
+  max-width: 40rem;
+  display: flex;
+  margin: 2rem auto;
+}
+
+.container div {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  border-radius: 1rem;
+  padding: var(--padding-padrao);
+  background-color: black;
+  border-radius: var(--border-radius);
+}
+/* .container div {
+  width: 40rem;
+    margin: var(--margin-padrao);
+    padding: var(--padding-padrao);
+    background-color: var(--cor-secao);
+    border-radius: var(--border-radius);
+} */
+.link {
+  text-decoration: none;
+  font-size: var(--tamanho-h2);
+  color: var(--cor-texto);
+  width: 7rem;
+  background-color: rgb(79, 79, 210);
+  border-radius: 1rem;
+  text-align: center;
 }
